--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="all.js"></script>
-    <title>Scatter Plot</title>
+    <title>Heat Map</title>
   </head>
   <body>
     <main class="section-center">
-      <h2 class="title" id="title">Doping in Professional Bicycle Racing</h2>
-      <h4 class="subtitle">35 fastest times up alpe d'Huez</h4>
+      <h2 class="title" id="title">Monthly Global Land-Surface Temperature</h2>
+      <h4 class="subtitle" id="description">
+        1753 - 2015: base temperature 8.66℃
+      </h4>
       <div class="vis-container"></div>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
